--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1,7 +1,9 @@
 title = "UniWebView"
 file = "README"
 
-summary = """The main class of UniWebView. It represents a native web view and exposes a few APIs for you to use in Unity. You could create and use an instance of `UniWebView` to show a page from URL, interact with the web content, as well as receive a message from the web view.
+summary = """The main class of UniWebView. It represents a native web view and exposes a few APIs for you to use in 
+Unity. You could create and use an instance of `UniWebView` to show a page from URL, interact with the web content, 
+as well as receive a message from the web view.
 """
 
 [[Properties]]
@@ -9,7 +11,8 @@ name = "Frame"
 returnType = "Rect"
 hasSetter = true
 summary = """Get or Set the frame of current web view. The value is based on current `Screen.width` and `Screen.height`.
-The first two values of `Rect` is `x` and `y` position and the followed two `width` and `height`. The original point is top left corner:
+The first two values of `Rect` is `x` and `y` position and the followed two `width` and `height`. The original point is 
+top left corner:
 
 ![](https://docs.unity3d.com/StaticFiles/ScriptRefImages/RectXY.svg)
 """
@@ -341,7 +344,7 @@ example = """
 // Animate current web view to cover half of the screen.
 var halfScreen = new Rect(0, 0, Screen.width, Screen.height / 2);
 webView.AnimateTo(halfScreen, 0.4f, 0.1f, () => {
-    print("Aniamtion finished!");
+    print("Animation finished!");
 });
 ```
 """
@@ -397,7 +400,7 @@ example = """
 ```csharp
 webView.AddJavaScript("function add() { return 1 + 2; }", (payload)=>{
     if (result.resultCode.Equal("0")) {
-        ptint("JavaScript adding finished without problem.");
+        print("JavaScript adding finished without problem.");
     }
 });
 ```
@@ -492,7 +495,7 @@ returnType = "void"
 summary = """
 Adds a domain to the SSL checking white list.
 
-If you are trying to access a website with untrusted or expired certification, 
+If you are trying to access a website with un-trusted or expired certification, 
 the web view will prevent its loading. If you could confirm that this site is trusted,
 you can add the domain as an SSL exception, so you could visit it.
 """
@@ -571,10 +574,10 @@ summary = "Sets the user agent used in the web view. If the string is null or em
 example = """
 ```csharp
 // Set the user agent string sent in request header.
-webView.SetUserAgent("My-Amazion-App/1.0.0 (iOS 10.3, iPhone 7)");
+webView.SetUserAgent("My-App/1.0.0 (iOS 10.3, iPhone 7)");
 
 // => In request header:
-// User-Agent = "My-Amazion-App/1.0.0 (iOS 10.3, iPhone 7)"
+// User-Agent = "My-App/1.0.0 (iOS 10.3, iPhone 7)"
 ```
 """
 [[Methods.parameters]]
@@ -596,9 +599,9 @@ webView.GetUserAgent()
 // This value varies in different platforms.
 
 // Sets a user agent and then get it.
-webView.SetUserAgent("My-Amazion-App/1.0.0 (iOS 10.3, iPhone 7)");
+webView.SetUserAgent("My-App/1.0.0 (iOS 10.3, iPhone 7)");
 webView.GetUserAgent()
-// => "My-Amazion-App/1.0.0 (iOS 10.3, iPhone 7)"
+// => "My-App/1.0.0 (iOS 10.3, iPhone 7)"
 ```
 """
 
@@ -638,7 +641,7 @@ syntax = "SetAllowAutoPlay(bool flag)"
 returnType = "void"
 
 summary = """
-Set allow autoplay for current web view. By default, 
+Set allow auto-play for current web view. By default, 
 users need to touch the play button to start playing a media resource.
 
 By setting this to `true`, you could start the playing automatically through
@@ -1004,11 +1007,11 @@ summary = "Whether enable the bounces effect should be applied or not."
 name = "SetZoomEnabled"
 syntax = "SetZoomEnabled(bool enabled)"
 returnType = "void"
-summary = "Sets whether the web view supports zoom guesture to change content size. Default is `false`, which means the zoom guesture is not supported."
+summary = "Sets whether the web view supports zoom gesture to change content size. Default is `false`, which means the zoom gesture is not supported."
 [[Methods.parameters]]
 name = "enabled"
 type = "bool"
-summary = "Whether the zoom guesture is allowed or not."
+summary = "Whether the zoom gesture is allowed or not."
 
 [[Methods]]
 name = "AddPermissionTrustDomain"
@@ -1169,7 +1172,7 @@ summary = "Whether the toolbar should snap to top of screen or to bottom of scre
 [[Methods.parameters]]
 name = "adjustInset"
 type = "bool"
-summary = "Whether the toolbar transition should also afjust web view position and size if overlapped. Default is `false`"
+summary = "Whether the toolbar transition should also adjust web view position and size if overlapped. Default is `false`"
 
 [[Methods]]
 name = "SetToolbarDoneButtonText"
@@ -1430,17 +1433,17 @@ Such as host not found or no Internet connection will raise this event.
 example = """
 ```csharp
 webView.OnPageErrorReceived += (view, error, message) => {
-    print("Errored.");
+    print("Error.");
 };
 
 webView.Load("https://onevcat-not-existing.com/");
-// => "Errored."
+// => "Error."
 
 webView.Load("unknown://host?param1=value1&param2=value2");
-// => "Errored."
+// => "Error."
 
 webView.Load("https://self-signed.badssl.com");
-// => "Errored."
+// => "Error."
 ```
 """
 [[Events.parameters]]
@@ -1485,7 +1488,7 @@ anotherWebView.OnMessageReceived += (view, message) => {
 }
 anotherWebView.AddUrlScheme("myscheme");
 
-// Clike the link "myscheme://action" in a web page.
+// Click the link "myscheme://action" in a web page.
 // <a href="myscheme://action">Click Me</a>
 
 // => "myscheme://action"
