--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1350,6 +1350,36 @@ color = "orange"
 name = "Android"
 color = "green"
 
+[[Methods]]
+name = "ScrollTo"
+syntax = "ScrollTo(int x, int y, bool animated)"
+returnType = "void"
+summary = """Scrolls the web view to a certain point.
+
+Use 0 for both `x` and `y` value to scroll the web view to its origin. In a normal vertical web page, it is equivalent as scrolling to top.
+
+You can use the `animated` parameter to control whether scrolling the page with or without animation.
+This parameter only works on iOS and Android. On macOS editor, the scrolling always happens without animation.
+"""
+[[Methods.parameters]]
+name = "x"
+type = "int"
+summary = "X value of the target scrolling point."
+[[Methods.parameters]]
+name = "y"
+type = "int"
+summary = "Y value of the target scrolling point."
+[[Methods.parameters]]
+name = "animated"
+type = "bool"
+summary = "If `true`, the scrolling happens with animation. Otherwise, it happens without animation and the content is set directly."
+example = """
+```csharp
+// Scroll the web page to top with animation.
+webView.ScrollTo(0, 0, true);
+```
+"""
+
 [[Events]]
 name = "OnPageStarted"
 syntax = "OnPageStarted(UniWebView webView, string url)"
