--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1153,7 +1153,7 @@ On Android, the device back button in navigation bar will navigate users to a ba
 Listen to `OnKeyCodeReceived` if you need to disable the back button, but still, want to get the back button key pressing event.
 
 This method is only for Android. On iOS, you could show a toolbar with navigation and Done buttons for 
-similar purpose.
+similar purpose or call `SetAllowBackForwardNavigationGestures` to enable gesture based navigation on iOS.
 
 The default is enabled.
 """
@@ -1461,6 +1461,36 @@ notice = "This method only works for macOS for debugging purpose. It does nothin
 name = "enabled"
 type = "bool"
 summary = "Whether the window could be able to be resized by the cursor."
+[[Methods.badges]]
+name = "macOS"
+color = "purple"
+
+[[Methods]]
+name = "SetAllowBackForwardNavigationGestures"
+syntax = "SetAllowBackForwardNavigationGestures(bool flag)"
+returnType = "void"
+summary = """
+Sets whether horizontal swipe gestures should trigger back-forward list navigation.
+
+By setting with `true`, users can swipe from screen edge to perform a back or forward navigation.
+This method only works on iOS and macOS Editor. Default is `false`. 
+ 
+On Android, the screen navigation gestures are simulating the traditional back button and it is enabled by 
+default. To disable gesture navigation on Android, you have to also disable the device back button. See 
+`SetBackButtonEnabled` for that purpose.
+"""
+example = """
+```csharp
+webView.SetAllowBackForwardNavigationGestures(true);
+```
+"""
+[[Methods.parameters]]
+name = "flag"
+type = "bool"
+summary = "The value indicates whether a swipe gestures driven navigation should be allowed. Default is `false`."
+[[Methods.badges]]
+name = "iOS"
+color = "orange"
 [[Methods.badges]]
 name = "macOS"
 color = "purple"
